feat: Rate limiter implementation
